# University

Algortihm and Data Structures/: .gitignore  build.gradle  gradle.properties  (+1 more)
Object Oriented Programming/: CMakeLists.txt  main.cpp
Object Oriented Programming/practise/: Person.h  Template.h  test.cpp  test.h
Object Oriented Programming/practise/geometry/: Circle.cpp  Circle.h  Figure.h  Hexagon.cpp  Hexagon.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h
Object Oriented Programming/practise/point/: ArrayPoint.cpp  ArrayPoint.h  Point.h  SimplePoint.cpp  SimplePoint.h
Object Oriented Programming/task1/: task1.cpp  task1.h
Object Oriented Programming/task10/: City.cpp  City.h  task10.cpp  task10.h
Object Oriented Programming/task11/: Character.h  task11.cpp  task11.h
Object Oriented Programming/task12/: PassengerCar.cpp  PassengerCar.h  StationWagon.cpp  StationWagon.h  Van.cpp  Van.h  Vehicle.cpp  Vehicle.h  task12.cpp  task12.h
Object Oriented Programming/task2/: Position.h  task2.cpp  task2.h
Object Oriented Programming/task3/: Position.cpp  Position.h  task3.cpp  task3.h
Object Oriented Programming/task4/: City.cpp  City.h  task4.cpp  task4.h
Object Oriented Programming/task5/: City.cpp  City.h  task5.cpp  task5.h
Object Oriented Programming/task6/: City.cpp  City.h  task6.cpp  task6.h
Object Oriented Programming/task7/: City.cpp  City.h  Position.cpp  Position.h  task7.cpp  task7.h
Object Oriented Programming/task8/: City.cpp  City.h  task8.cpp  task8.h
Object Oriented Programming/task9/: City.cpp  City.h  task9.cpp  task9.h
(+1100 files in other folders)
